--- a/style.css
+++ b/style.css
@@ -143,6 +143,9 @@ section{
     margin-top: 10px;
     align-items: center;
 }
+.circle p{
+ color: var(--Light-lavender);       
+}
 @media  screen and (max-width:600px) {
    
     .card {
